--- a/StewardClient/src/app/pages/ticket-app/pages/apollo/apollo.component.html
+++ b/StewardClient/src/app/pages/ticket-app/pages/apollo/apollo.component.html
@@ -1,4 +1,1 @@
-<apollo-player-details
-  [gamertag]="gamertag"
-  (xuidFoundEvent)="xuid = $event"
-></apollo-player-details>
+<apollo-player-details [gamertag]="gamertag"></apollo-player-details>
