--- a/StewardClient/src/app/pages/ticket-app/pages/gravity/gravity.component.html
+++ b/StewardClient/src/app/pages/ticket-app/pages/gravity/gravity.component.html
@@ -1,4 +1,1 @@
-<gravity-player-details
-    [gamertag]="gamertag"
-    (xuidFoundEvent)="xuid = $event"
-></gravity-player-details>
+<gravity-player-details [gamertag]="gamertag"></gravity-player-details>
