--- a/StewardClient/src/app/pages/ticket-app/pages/sunrise/sunrise.component.html
+++ b/StewardClient/src/app/pages/ticket-app/pages/sunrise/sunrise.component.html
@@ -1,4 +1,1 @@
-<sunrise-player-details
-  [gamertag]="gamertag"
-  (xuidFoundEvent)="xuid = $event"
-></sunrise-player-details>
+<sunrise-player-details [gamertag]="gamertag"></sunrise-player-details>
