--- a/StewardClient/src/app/shared/components/title-dropdown/title-dropdown.component.html
+++ b/StewardClient/src/app/shared/components/title-dropdown/title-dropdown.component.html
@@ -1,7 +1,7 @@
-<mat-form-field appearance="fill">
+<mat-form-field>
   <mat-label>Select a title</mat-label>
-  <mat-select>
-    <mat-option *ngFor="let option of titleOptions">
+  <mat-select [value]="selectedOption">
+    <mat-option *ngFor="let option of titleOptions" [value]="option" (click)="newTitleSelection(option)">
       {{option}}
     </mat-option>
   </mat-select>
