--- a/StewardClient/src/app/pages/home/home.component.html
+++ b/StewardClient/src/app/pages/home/home.component.html
@@ -4,7 +4,7 @@
     <p>You probably want one of these</p>
     <ul>
       <li><a routerLink="/navbar-app/tools/home">Navbar App Tools</a></li>
-      <li><a routerLink="/ticket-app/">Ticket App</a></li>
+      <li><a routerLink="/ticket-app/title">Ticket App</a></li>
     </ul>
   </mat-card>
 </center-contents>
