--- a/StewardClient/src/app/pages/ticket-app/pages/apollo/apollo.component.html
+++ b/StewardClient/src/app/pages/ticket-app/pages/apollo/apollo.component.html
@@ -1,1 +1,4 @@
 <apollo-player-details [gamertag]="gamertag"></apollo-player-details>
+<quick-actions>
+  <go-to-inventory-button [gameTitle]="gameTitle" [xuid]="xuid"></go-to-inventory-button>
+</quick-actions>
