--- a/StewardClient/src/app/pages/ticket-app/ticket-app.component.html
+++ b/StewardClient/src/app/pages/ticket-app/ticket-app.component.html
@@ -1,51 +1,1 @@
-<div *ngIf="!loading; else loading">
-  <h2 *ngIf="!!gameTitle">{{ gameTitle }}</h2>
-  <h4 *ngIf="!!gamertag">{{ gamertag }}</h4>
-
-  <!-- TODO: Should probably just route to these from `ticket-app` based on detected game. -->
-  <ng-container [ngSwitch]="gameTitle">
-    <ng-container *ngSwitchCase="gameTitleCodeNames.Street">
-      <ticket-app-gravity [gamertag]="gamertag"></ticket-app-gravity>
-    </ng-container>
-
-    <ng-container *ngSwitchCase="gameTitleCodeNames.FH4">
-      <ticket-app-sunrise [gamertag]="gamertag"></ticket-app-sunrise>
-    </ng-container>
-
-    <ng-container *ngSwitchCase="gameTitleCodeNames.FM7">
-      <ticket-app-apollo [gamertag]="gamertag"></ticket-app-apollo>
-    </ng-container>
-
-    <ng-container *ngSwitchCase="gameTitleCodeNames.FH3">
-      <ticket-app-apollo [gamertag]="gamertag"></ticket-app-apollo>
-    </ng-container>
-  </ng-container>
-
-  <section class="quick-actions">
-    <mat-card>
-      <mat-card-content>
-        <content-collapse>
-          <h2 content-title>Quick Actions</h2>
-          <section content-body>
-            <div class="actions">
-              <button
-                *ngIf="!!gamertag && !!xuid"
-                mat-raised-button
-                color="primary"
-                (click)="goToInventory()"
-              >
-                Go To Inventory
-              </button>
-            </div>
-          </section>
-        </content-collapse>
-      </mat-card-content>
-    </mat-card>
-  </section>
-</div>
-
-<ng-container #loading>
-  <section>
-    <h1>Loading...</h1>
-  </section>
-</ng-container>
+<router-outlet></router-outlet>
