--- a/StewardClient/src/app/pages/navbar-app/pages/user-details/sunrise/sunrise.component.html
+++ b/StewardClient/src/app/pages/navbar-app/pages/user-details/sunrise/sunrise.component.html
@@ -20,7 +20,7 @@
         <mat-tab label="JSON">
           <div class="tab-container">
             <p>Gamertag: {{ gamertag }}</p>
-            <pre>{{ userDetails | bigjson }}</pre>
+            <json-dump [input]="userDetails"></json-dump>
           </div>
         </mat-tab>
       </mat-tab-group>
@@ -34,7 +34,7 @@
     <hr />
     <h2>Request failed</h2>
     <p>If this keeps happening, contact support.</p>
-    <pre>{{ error | bigjson }}</pre>
+    <json-dump [input]="error"></json-dump>
   </ng-container>
 </ng-template>
 
@@ -44,6 +44,6 @@
     <hr />
     <h2>Request failed</h2>
     <p>If this keeps happening, contact support.</p>
-    <pre>{{ error | bigjson }}</pre>
+    <json-dump [input]="error"></json-dump>
   </ng-container>
 </ng-template>
