--- a/StewardClient/src/app/pages/ticket-app/pages/sunrise/sunrise.component.html
+++ b/StewardClient/src/app/pages/ticket-app/pages/sunrise/sunrise.component.html
@@ -1,4 +1,6 @@
 <sunrise-player-details [gamertag]="gamertag"></sunrise-player-details>
+<sunrise-user-flags [xuid]="xuid"></sunrise-user-flags>
+<sunrise-ban-history [xuid]="xuid"></sunrise-ban-history>
 <quick-actions>
   <go-to-inventory-button [gameTitle]="gameTitle" [xuid]="xuid"></go-to-inventory-button>
 </quick-actions>
