--- a/StewardClient/src/app/shared/views/credit-history/titles/sunrise/sunrise-credit-history.component.html
+++ b/StewardClient/src/app/shared/views/credit-history/titles/sunrise/sunrise-credit-history.component.html
@@ -57,5 +57,5 @@
 <ng-template #failstate>
   <mat-progress-spinner *ngIf="isLoading" mode="indeterminate"></mat-progress-spinner>
   <p *ngIf="loadError">Failed to load.</p>
-  <pre *ngIf="loadError">{{ loadError | bigjson }}</pre>
+  <json-dump *ngIf="loadError" [input]="loadError"></json-dump>
 </ng-template>
