--- a/StewardClient/src/app/shared/views/overview/titles/sunrise/sunrise-overview.component.html
+++ b/StewardClient/src/app/shared/views/overview/titles/sunrise/sunrise-overview.component.html
@@ -59,5 +59,5 @@
 <ng-template #failstate>
   <mat-progress-spinner *ngIf="isLoading" mode="indeterminate"></mat-progress-spinner>
   <p *ngIf="loadError">Failed to load.</p>
-  <pre *ngIf="loadError">{{ loadError | bigjson }}</pre>
+  <json-dump *ngIf="loadError" [input]="loadError"></json-dump>
 </ng-template>
