--- a/StewardClient/src/app/shared/views/player-details/player-details.component.html
+++ b/StewardClient/src/app/shared/views/player-details/player-details.component.html
@@ -16,135 +16,135 @@
           <ng-container *ngIf="!isLoading && !loadError; else failstate">
             <player-details-item
               [name]="'XUID'"
-              [value]="playerDetailsIntersection.xuid"
+              [value]="playerDetailsComposite.xuid"
             ></player-details-item>
             <player-details-item
               [name]="'Gamertag'"
-              [value]="playerDetailsIntersection.gamertag"
+              [value]="playerDetailsComposite.gamertag"
             ></player-details-item>
             <player-details-item
               [name]="'First Login'"
-              [value]="playerDetailsIntersection.firstLoginUtc"
+              [value]="playerDetailsComposite.firstLoginUtc"
             ></player-details-item>
             <player-details-item
               [name]="'Last Login'"
-              [value]="playerDetailsIntersection.lastLoginUtc"
+              [value]="playerDetailsComposite.lastLoginUtc"
             ></player-details-item>
             <player-details-item
               [name]="'Region'"
-              [value]="playerDetailsIntersection.region"
+              [value]="playerDetailsComposite.region"
             ></player-details-item>
             <player-details-item
               [name]="'Country'"
-              [value]="playerDetailsIntersection.country"
+              [value]="playerDetailsComposite.country"
             ></player-details-item>
             <player-details-item
               [name]="'IP Address'"
-              [value]="playerDetailsIntersection.ipAddress"
+              [value]="playerDetailsComposite.ipAddress"
             ></player-details-item>
             <player-details-item
               [name]="'LCID'"
-              [value]="playerDetailsIntersection.lcid"
+              [value]="playerDetailsComposite.lcid"
             ></player-details-item>
             <player-details-item
               [name]="'Age Group'"
-              [value]="playerDetailsIntersection.ageGroup"
+              [value]="playerDetailsComposite.ageGroup"
             ></player-details-item>
             <player-details-item
               [name]="'Subscription Tier'"
-              [value]="playerDetailsIntersection.subscriptionTier"
+              [value]="playerDetailsComposite.subscriptionTier"
             ></player-details-item>
             <player-details-item
               [name]="'Last Game Settings Used'"
-              [value]="playerDetailsIntersection.lastGameSettingsUsed"
+              [value]="playerDetailsComposite.lastGameSettingsUsed"
             ></player-details-item>
             <player-details-item
               [name]="'Time Offset (sec)'"
-              [value]="playerDetailsIntersection.timeOffsetInSeconds"
+              [value]="playerDetailsComposite.timeOffsetInSeconds"
             ></player-details-item>
             <player-details-item
               [name]="'Inventory Id'"
-              [value]="playerDetailsIntersection.userInventoryId"
+              [value]="playerDetailsComposite.userInventoryId"
             ></player-details-item>
             <player-details-item
               [name]="'Career Level'"
-              [value]="playerDetailsIntersection.currentCareerLevel"
+              [value]="playerDetailsComposite.currentCareerLevel"
             ></player-details-item>
             <player-details-item
               [name]="'Flags'"
-              [value]="playerDetailsIntersection.flags"
+              [value]="playerDetailsComposite.flags"
             ></player-details-item>
             <player-details-item
               [name]="'License Plate'"
-              [value]="playerDetailsIntersection.licensePlate"
+              [value]="playerDetailsComposite.licensePlate"
             ></player-details-item>
             <player-details-item
               [name]="'Painter Thread Level'"
-              [value]="playerDetailsIntersection.painterThreadLevel"
+              [value]="playerDetailsComposite.painterThreadLevel"
             ></player-details-item>
             <player-details-item
               [name]="'Photo Thread Level'"
-              [value]="playerDetailsIntersection.photoThreadLevel"
+              [value]="playerDetailsComposite.photoThreadLevel"
             ></player-details-item>
             <player-details-item
               [name]="'Tuner Thread Level'"
-              [value]="playerDetailsIntersection.tunerThreadLevel"
+              [value]="playerDetailsComposite.tunerThreadLevel"
             ></player-details-item>
             <player-details-item
               [name]="'Blueprint Thread Level'"
-              [value]="playerDetailsIntersection.blueprintThreadLevel"
+              [value]="playerDetailsComposite.blueprintThreadLevel"
             ></player-details-item>
             <player-details-item
               [name]="'Club Id'"
-              [value]="playerDetailsIntersection.clubId"
+              [value]="playerDetailsComposite.clubId"
             ></player-details-item>
             <player-details-item
               [name]="'Club Tag'"
-              [value]="playerDetailsIntersection.clubTag"
+              [value]="playerDetailsComposite.clubTag"
             ></player-details-item>
             <player-details-item
               [name]="'Role In Club'"
-              [value]="playerDetailsIntersection.roleInClub"
+              [value]="playerDetailsComposite.roleInClub"
             ></player-details-item>
             <player-details-item
               [name]="'Team Id'"
-              [value]="playerDetailsIntersection.teamId"
+              [value]="playerDetailsComposite.teamId"
             ></player-details-item>
             <player-details-item
               [name]="'Team Tag'"
-              [value]="playerDetailsIntersection.teamTag"
+              [value]="playerDetailsComposite.teamTag"
             ></player-details-item>
             <player-details-item
               [name]="'Role In Team'"
-              [value]="playerDetailsIntersection.roleInTeam"
+              [value]="playerDetailsComposite.roleInTeam"
             ></player-details-item>
             <player-details-item
               [name]="'Current Badge Id'"
-              [value]="playerDetailsIntersection.currentBadgeId"
+              [value]="playerDetailsComposite.currentBadgeId"
             ></player-details-item>
             <player-details-item
               [name]="'Current Driver Model Id'"
-              [value]="playerDetailsIntersection.currentDriverModelId"
+              [value]="playerDetailsComposite.currentDriverModelId"
             ></player-details-item>
             <player-details-item
               [name]="'Current Player Title Id'"
-              [value]="playerDetailsIntersection.currentPlayerTitleId"
+              [value]="playerDetailsComposite.currentPlayerTitleId"
             ></player-details-item>
             <player-details-item
               [name]="'Equipped Vanity Item Id'"
-              [value]="playerDetailsIntersection.equippedVanityItemId"
+              [value]="playerDetailsComposite.equippedVanityItemId"
             ></player-details-item>
             <player-details-item
               [name]="'Accepts Club Invites'"
-              [value]="playerDetailsIntersection.acceptsClubInvites"
+              [value]="playerDetailsComposite.acceptsClubInvites"
             ></player-details-item>
             <player-details-item
               [name]="'Club Top Tier Count'"
-              [value]="playerDetailsIntersection.clubTopTierCount"
+              [value]="playerDetailsComposite.clubTopTierCount"
             ></player-details-item>
             <player-details-item
               [name]="'User Age Group'"
-              [value]="playerDetailsIntersection.ageGroup"
+              [value]="playerDetailsComposite.ageGroup"
             ></player-details-item>
           </ng-container>
         </div>
