big chunk of player selection tool UI done

--- a/StewardClient/src/app/pages/navbar-app/pages/gifting/gravity/gravity-gifting.component.html
+++ b/StewardClient/src/app/pages/navbar-app/pages/gifting/gravity/gravity-gifting.component.html
@@ -1,4 +1,3 @@
 <ng-container>
-  <p>gravity</p>
-  <t10-based-player-selection></t10-based-player-selection>
+  <player-selection></player-selection>
 </ng-container>
