--- a/StewardClient/src/app/pages/navbar-app/pages/gifting/sunrise/sunrise-gifting.component.html
+++ b/StewardClient/src/app/pages/navbar-app/pages/gifting/sunrise/sunrise-gifting.component.html
@@ -1,4 +1,3 @@
 <ng-container>
-  <p>sunrise</p>
-  <xuid-based-player-selection></xuid-based-player-selection>
+  <player-selection [allowT10Id]="false" [allowGroup]="false"></player-selection>
 </ng-container>
