--- a/StewardClient/src/app/pages/navbar-app/pages/gifting/apollo/apollo-gifting.component.html
+++ b/StewardClient/src/app/pages/navbar-app/pages/gifting/apollo/apollo-gifting.component.html
@@ -1,4 +1,3 @@
 <ng-container>
-  <p>apollo</p>
-  <xuid-based-player-selection></xuid-based-player-selection>
+  <player-selection [allowT10Id]="false"></player-selection>
 </ng-container>
