fix some player selection logic on the validate button disabled state

--- a/StewardClient/src/app/pages/navbar-app/components/player-selection/player-selection.component.scss
+++ b/StewardClient/src/app/pages/navbar-app/components/player-selection/player-selection.component.scss
@@ -1,7 +1,8 @@
 @import '/src/variables.scss';
 
-div {
+mat-card {
   padding: 20px;
+  display: inline-block;
 
   #groupDisabledError {
     color: mat-color($app-warn);
