--- a/StewardClient/src/app/shared/views/player-details/player-details.component.html
+++ b/StewardClient/src/app/shared/views/player-details/player-details.component.html
@@ -155,6 +155,5 @@
 
 <ng-template #failstate>
   <mat-progress-spinner *ngIf="isLoading" mode="indeterminate"></mat-progress-spinner>
-  <p *ngIf="loadError">Failed to load.</p>
-  <pre *ngIf="loadError">{{ loadError | json }}</pre>
+  <json-dump *ngIf="loadError" [input]="loadError">Failed to load.</json-dump>
 </ng-template>
