--- a/StewardClient/src/app/pages/navbar-app/pages/gifting/apollo/apollo-gifting.component.html
+++ b/StewardClient/src/app/pages/navbar-app/pages/gifting/apollo/apollo-gifting.component.html
@@ -1,3 +1,3 @@
 <ng-container>
-  <player-selection [allowT10Id]="false"></player-selection>
+  <apollo-player-selection [allowT10Id]="false"></apollo-player-selection>
 </ng-container>
