--- a/StewardClient/src/app/pages/navbar-app/pages/gifting/opus/opus-gifting.component.html
+++ b/StewardClient/src/app/pages/navbar-app/pages/gifting/opus/opus-gifting.component.html
@@ -1,3 +1,3 @@
 <ng-container>
-  <player-selection [allowT10Id]="false"></player-selection>
+  <opus-player-selection [allowT10Id]="false"></opus-player-selection>
 </ng-container>
