--- a/StewardClient/src/app/shared/components/json-dump/json-dump.component.scss
+++ b/StewardClient/src/app/shared/components/json-dump/json-dump.component.scss
@@ -12,4 +12,10 @@ pre {
   mat-panel-description {
     display: none;
   }
+
+  :host {
+    margin: 0 -14px;
+    margin-bottom: -8px;
+    display: block;
+  }
 }
