gravity gifting now has valid state

--- a/StewardClient/src/app/pages/navbar-app/pages/gifting/apollo/apollo-gifting.component.html
+++ b/StewardClient/src/app/pages/navbar-app/pages/gifting/apollo/apollo-gifting.component.html
@@ -1,3 +1,4 @@
 <ng-container>
-  <apollo-player-selection [allowT10Id]="false"></apollo-player-selection>
+  <apollo-player-selection [allowT10Id]="false"
+   (selectedPlayerIdentitiesEvent)="selectedPlayerIndentities($event)"></apollo-player-selection>
 </ng-container>
