--- a/StewardClient/src/app/pages/navbar-app/pages/gifting/opus/opus-gifting.component.html
+++ b/StewardClient/src/app/pages/navbar-app/pages/gifting/opus/opus-gifting.component.html
@@ -1,3 +1,4 @@
 <ng-container>
-  <opus-player-selection [allowT10Id]="false"></opus-player-selection>
+  <opus-player-selection [allowT10Id]="false"
+    (selectedPlayerIdentitiesEvent)="selectedPlayerIndentities($event)"></opus-player-selection>
 </ng-container>
