--- a/StewardClient/src/app/pages/navbar-app/pages/gifting/sunrise/sunrise-gifting.component.html
+++ b/StewardClient/src/app/pages/navbar-app/pages/gifting/sunrise/sunrise-gifting.component.html
@@ -1,3 +1,4 @@
 <ng-container>
-  <sunrise-player-selection [allowT10Id]="false" [allowGroup]="false"></sunrise-player-selection>
+  <sunrise-player-selection [allowT10Id]="false" [allowGroup]="false"
+    (selectedPlayerIdentitiesEvent)="selectedPlayerIndentities($event)"></sunrise-player-selection>
 </ng-container>
