--- a/StewardClient/src/app/pages/navbar-app/pages/gifting/sunrise/sunrise-gifting.component.html
+++ b/StewardClient/src/app/pages/navbar-app/pages/gifting/sunrise/sunrise-gifting.component.html
@@ -1,4 +1,8 @@
 <ng-container>
-  <sunrise-player-selection [allowT10Id]="false" [allowGroup]="false"
+  <sunrise-player-selection [allowT10Id]="false" [allowGroup]="false" [initPlayerSelectionState]="selectedPlayerIdentities"
     (selectedPlayerIdentitiesEvent)="selectedPlayerIndentities($event)"></sunrise-player-selection>
+
+  <br /><br />
+  <h2>Sunrise gifting page state</h2>
+  <p>Number of identities: {{ selectedPlayerIdentities?.length }}</p>
 </ng-container>
