--- a/StewardClient/src/app/pages/navbar-app/components/player-selection/player-selection.component.scss
+++ b/StewardClient/src/app/pages/navbar-app/components/player-selection/player-selection.component.scss
@@ -34,6 +34,8 @@ mat-card {
 
   .identity-results {
     max-height: 400px;
+    min-width: 500px;
+    max-width: 500px;
     overflow: auto;
   }
 }
