fixed route management. /gifting is no longer stored to browser history

--- a/StewardClient/src/app/pages/navbar-app/components/navbar/navbar.component.html
+++ b/StewardClient/src/app/pages/navbar-app/components/navbar/navbar.component.html
@@ -6,7 +6,7 @@
   <a
     *ngFor="let item of items"
     mat-button
-    [routerLink]="item.routerLink"
+    (click)="routeTo(item)"
     routerLinkActive="mat-stroked-button"
   >
     {{ item.title }}
