--- a/StewardClient/src/app/pages/navbar-app/pages/gifting/apollo/apollo-gifting.component.html
+++ b/StewardClient/src/app/pages/navbar-app/pages/gifting/apollo/apollo-gifting.component.html
@@ -1,6 +1,9 @@
 <ng-container>
-  <apollo-player-selection [allowT10Id]="false" [initPlayerSelectionState]="selectedPlayerIdentities"
-    (selectedPlayerIdentitiesEvent)="selectedPlayerIndentities($event)"></apollo-player-selection>
+  <apollo-player-selection
+    [allowT10Id]="false"
+    [initPlayerSelectionState]="selectedPlayerIdentities"
+    (selectedPlayerIdentitiesEvent)="selectedPlayerIndentities($event)"
+  ></apollo-player-selection>
 
   <br /><br />
   <h2>Apollo gifting page state</h2>
