--- a/StewardClient/src/app/pages/navbar-app/pages/gifting/opus/opus-gifting.component.html
+++ b/StewardClient/src/app/pages/navbar-app/pages/gifting/opus/opus-gifting.component.html
@@ -1,6 +1,9 @@
 <ng-container>
-  <opus-player-selection [allowT10Id]="false" [initPlayerSelectionState]="selectedPlayerIdentities"
-    (selectedPlayerIdentitiesEvent)="selectedPlayerIndentities($event)"></opus-player-selection>
+  <opus-player-selection
+    [allowT10Id]="false"
+    [initPlayerSelectionState]="selectedPlayerIdentities"
+    (selectedPlayerIdentitiesEvent)="selectedPlayerIndentities($event)"
+  ></opus-player-selection>
 
   <br /><br />
   <h2>Opus gifting page state</h2>
