--- a/StewardClient/src/app/pages/navbar-app/pages/gifting/sunrise/sunrise-gifting.component.html
+++ b/StewardClient/src/app/pages/navbar-app/pages/gifting/sunrise/sunrise-gifting.component.html
@@ -1,6 +1,10 @@
 <ng-container>
-  <sunrise-player-selection [allowT10Id]="false" [allowGroup]="false" [initPlayerSelectionState]="selectedPlayerIdentities"
-    (selectedPlayerIdentitiesEvent)="selectedPlayerIndentities($event)"></sunrise-player-selection>
+  <sunrise-player-selection
+    [allowT10Id]="false"
+    [allowGroup]="false"
+    [initPlayerSelectionState]="selectedPlayerIdentities"
+    (selectedPlayerIdentitiesEvent)="selectedPlayerIndentities($event)"
+  ></sunrise-player-selection>
 
   <br /><br />
   <h2>Sunrise gifting page state</h2>
