--- a/StewardClient/src/app/pages/navbar-app/components/player-selection/player-selection.component.html
+++ b/StewardClient/src/app/pages/navbar-app/components/player-selection/player-selection.component.html
@@ -1,30 +1,72 @@
 <mat-card>
-  <content-collapse>
-    <h2 content-title> 
-      Player Selection 
-      {{ playerIdentityResults?.length > 0 ? '(' + playerIdentityResults?.length + ')' : '' }}
+  <content-collapse [contentCollapsed]="contentCollapseState">
+    <h2 content-title>
+      Player Selection
+      <span *ngIf="playerIdentityResults?.length > 0">({{ playerIdentityResults?.length }})</span>
+      <span *ngIf="numPlayerIdentityErrorResults > 0" class="num-errors-text">
+        ({{ numPlayerIdentityErrorResults }} error{{
+          numPlayerIdentityErrorResults > 1 ? 's' : ''
+        }})</span
+      >
     </h2>
-    <ng-container content-body class="selection-content" *ngIf="!isLoading && !loadError; else failState">
+
+    <ng-container
+      content-body
+      class="selection-content"
+      *ngIf="!isLoading && !loadError; else failState"
+    >
       <ng-container *ngIf="playerIdentityResults?.length <= 0; else resultsView">
         <div class="content-container">
           <mat-button-toggle-group name="playerIdType" aria-label="Player id type">
-            <mat-button-toggle *ngIf="allowT10Id" (change)="playerIdTypeChange($event.value)" value="t10id">T10Id</mat-button-toggle>
-            <mat-button-toggle value="xuid" (change)="playerIdTypeChange($event.value)">Xuid</mat-button-toggle>
-            <mat-button-toggle value="gamertag" (change)="playerIdTypeChange($event.value)">Gamertag</mat-button-toggle>
+            <mat-button-toggle value="gamertag" (change)="playerIdTypeChange($event.value)"
+              >Gamertag</mat-button-toggle
+            >
+            <mat-button-toggle value="xuid" (change)="playerIdTypeChange($event.value)"
+              >Xuid</mat-button-toggle
+            >
+            <mat-button-toggle
+              *ngIf="allowT10Id"
+              (change)="playerIdTypeChange($event.value)"
+              value="t10id"
+              >T10Id</mat-button-toggle
+            >
           </mat-button-toggle-group>
-          <mat-form-field appearance="fill">
-            <mat-label>Player Id{{allowGroup ? '(s)' : '' }}:</mat-label>
-            <textarea matInput #playerInfo
-              [ngClass]="{ 'expanded-text-area': showExpandedTextArea}"
-              [(ngModel)]="data" (ngModelChange)="playerInfoChanged()"></textarea>
-          </mat-form-field>
-          <button (click)="clearInput()" mat-stroked-button color="accent">Clear</button>
-          <button (click)="validatePlayerIds()" [disabled]="disableValidateButton" class="validateBtn" mat-raised-button color="primary">Validate</button>
-          <p id="groupDisabledError" *ngIf="showGroupDisabledError">Group selection is disabled for this tool.</p>
-        </div>    
+          <div class="player-id-input">
+            <mat-form-field appearance="fill">
+              <mat-label>Player Id{{ allowGroup ? '(s)' : '' }}:</mat-label>
+              <textarea
+                matInput
+                #playerInfo
+                [ngClass]="{ 'expanded-text-area': showExpandedTextArea }"
+                [(ngModel)]="data"
+                (ngModelChange)="playerInfoChanged()"
+              ></textarea>
+            </mat-form-field>
+            <button
+              (click)="validatePlayerIds()"
+              [disabled]="disableValidateButton"
+              class="validate-btn"
+              mat-raised-button
+              color="primary"
+            >
+              Validate
+            </button>
+            <p id="groupDisabledError" *ngIf="showGroupDisabledError">
+              Group selection is disabled for this tool.
+            </p>
+          </div>
+        </div>
       </ng-container>
     </ng-container>
   </content-collapse>
+  <button
+    class="clear-identity-results-btn"
+    mat-stroked-button
+    color="accent"
+    (click)="playerIdentityResults?.length > 0 ? clearResults() : clearInput()"
+  >
+    Clear
+  </button>
 </mat-card>
 
 <ng-template #resultsView id="results-view">
@@ -35,9 +77,13 @@
           <th>Remove</th>
           <th>Gamertag</th>
           <th>Xuid</th>
-          <th>T10 Id</th>
+          <th *ngIf="allowT10Id">T10 Id</th>
         </tr>
-        <tr class="results-row" *ngFor="let identity of playerIdentityResults; let i = index">
+        <tr
+          class="results-row"
+          *ngFor="let identity of playerIdentityResults; let i = index"
+          [ngClass]="{ 'player-lookup-error': identity.error }"
+        >
           <td>
             <button mat-icon-button (click)="removePlayerFromList(i)">
               <fa-icon class="fa-2x" [icon]="closeIcon"></fa-icon>
@@ -45,11 +91,10 @@
           </td>
           <td>{{ identity?.gamertag }}</td>
           <td>{{ identity?.xuid }}</td>
-          <td>{{ identity?.t10id }}</td>
+          <td *ngIf="allowT10Id">{{ identity?.t10id }}</td>
         </tr>
       </table>
     </div>
-    <button class="clear-identity-results-btn" (click)="clearResults()" mat-stroked-button color="accent">Clear Results</button>
   </div>
 </ng-template>
 
