--- a/StewardClient/src/app/pages/navbar-app/pages/gifting/gravity/gravity-gifting.component.html
+++ b/StewardClient/src/app/pages/navbar-app/pages/gifting/gravity/gravity-gifting.component.html
@@ -1,7 +1,9 @@
 <ng-container>
-  <gravity-player-selection [initPlayerSelectionState]="selectedPlayerIdentities" 
-    (selectedPlayerIdentitiesEvent)="selectedPlayerIndentities($event)"></gravity-player-selection>
-  
+  <gravity-player-selection
+    [initPlayerSelectionState]="selectedPlayerIdentities"
+    (selectedPlayerIdentitiesEvent)="selectedPlayerIndentities($event)"
+  ></gravity-player-selection>
+
   <br /><br />
   <h2>Gravity gifting page state</h2>
   <p>Number of identities: {{ selectedPlayerIdentities?.length }}</p>
