--- a/StewardClient/src/app/shared/components/title-dropdown/title-dropdown.component.html
+++ b/StewardClient/src/app/shared/components/title-dropdown/title-dropdown.component.html
@@ -1,8 +1,12 @@
 <mat-form-field>
   <mat-label>Select a title</mat-label>
   <mat-select [value]="selectedOption">
-    <mat-option *ngFor="let option of titleOptions" [value]="option" (click)="newTitleSelection(option)">
-      {{option}}
+    <mat-option
+      *ngFor="let option of titleOptions"
+      [value]="option"
+      (click)="newTitleSelection(option)"
+    >
+      {{ option }}
     </mat-option>
   </mat-select>
 </mat-form-field>
