use correct player selection configs for gifting pages

--- a/StewardClient/src/app/pages/navbar-app/pages/gifting/apollo/apollo-gifting.component.html
+++ b/StewardClient/src/app/pages/navbar-app/pages/gifting/apollo/apollo-gifting.component.html
@@ -1,6 +1,7 @@
 <ng-container>
   <apollo-player-selection
     [allowT10Id]="false"
+    [allowGroup]="false"
     [initPlayerSelectionState]="selectedPlayerIdentities"
     (selectedPlayerIdentitiesEvent)="selectedPlayerIndentities($event)"
   ></apollo-player-selection>
