--- a/StewardClient/src/app/pages/navbar-app/pages/gifting/opus/opus-gifting.component.html
+++ b/StewardClient/src/app/pages/navbar-app/pages/gifting/opus/opus-gifting.component.html
@@ -1,6 +1,7 @@
 <ng-container>
   <opus-player-selection
     [allowT10Id]="false"
+    [allowGroup]="false"
     [initPlayerSelectionState]="selectedPlayerIdentities"
     (selectedPlayerIdentitiesEvent)="selectedPlayerIndentities($event)"
   ></opus-player-selection>
