--- a/StewardClient/src/app/pages/navbar-app/pages/gifting/gifting.component.html
+++ b/StewardClient/src/app/pages/navbar-app/pages/gifting/gifting.component.html
@@ -1,5 +1,6 @@
 <mat-toolbar color="default">
-  <a *ngFor="let link of navbarRouterLinks"
+  <a
+    *ngFor="let link of navbarRouterLinks"
     [routerLink]="link.route"
     mat-button
     routerLinkActive="mat-stroked-button"
