Rename player-selection.base playerIdentities to follow two-way-binding convention.

--- a/StewardClient/src/app/pages/navbar-app/pages/gifting/gravity/gravity-gifting.component.html
+++ b/StewardClient/src/app/pages/navbar-app/pages/gifting/gravity/gravity-gifting.component.html
@@ -1,7 +1,7 @@
 <ng-container>
   <gravity-player-selection
-    [initPlayerSelectionState]="selectedPlayerIdentities"
-    (selectedPlayerIdentitiesEvent)="selectedPlayerIndentities($event)"
+    [(playerIdentities)]="selectedPlayerIdentities"
+    (playerIdentitiesChange)="selectedPlayerIndentities($event)"
   ></gravity-player-selection>
 
   <br /><br />
