--- a/StewardClient/src/app/pages/navbar-app/pages/gifting/sunrise/sunrise-gifting.component.html
+++ b/StewardClient/src/app/pages/navbar-app/pages/gifting/sunrise/sunrise-gifting.component.html
@@ -1,8 +1,8 @@
 <ng-container>
   <sunrise-player-selection
     [allowT10Id]="false"
-    [initPlayerSelectionState]="selectedPlayerIdentities"
-    (selectedPlayerIdentitiesEvent)="selectedPlayerIndentities($event)"
+    [(playerIdentities)]="selectedPlayerIdentities"
+    (playerIdentitiesChange)="selectedPlayerIndentities($event)"
   ></sunrise-player-selection>
 
   <br /><br />
