Initial layout of User Banning tools

--- a/StewardClient/src/app/pages/navbar-app/pages/user-banning/pages/gravity/gravity-banning.component.html
+++ b/StewardClient/src/app/pages/navbar-app/pages/user-banning/pages/gravity/gravity-banning.component.html
@@ -1,1 +1,8 @@
-<p>gravity-banning works!</p>
+<gravity-player-selection
+  [allowT10Id]="true"
+  [allowGroup]="true"
+  [(playerIdentities)]="selectedPlayerIdentities"
+  (playerIdentitiesChange)="onPlayerIdentitiesChange($event)"
+></gravity-player-selection>
+
+<ban-options></ban-options>
