--- a/StewardClient/src/app/pages/navbar-app/pages/user-banning/pages/opus/opus-banning.component.html
+++ b/StewardClient/src/app/pages/navbar-app/pages/user-banning/pages/opus/opus-banning.component.html
@@ -1,1 +1,8 @@
-<p>opus-banning works!</p>
+<opus-player-selection
+  [allowT10Id]="false"
+  [allowGroup]="false"
+  [(playerIdentities)]="selectedPlayerIdentities"
+  (playerIdentitiesChange)="onPlayerIdentitiesChange($event)"
+></opus-player-selection>
+
+<ban-options></ban-options>
